# Assignment_Luis

./: LICENSE  README.md  main.fdb_latexmk  main.fls
launch/: package.xml  perseverance_bridge.launch.py  setup.py
report/: main.aux  main.fdb_latexmk  main.fls  main.tex
report/tasks/: task1.tex  task2.tex  task3.tex  task4.tex
src/: robot.py  robot_gazebo.py
