<?xml version="1.0"?>
<package format="3">
  <name>perseverance_gz_bridge</name>
  <version>0.0.0</version>
  <description>Bridge for NASA Perseverance Rover</description>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>